<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Paillardes</string>
    
    <string name="list_titre">Paillardes - Liste des chansons</string>
    
    <string name="btn_list">Liste des chansons</string>
    <string name="btn_search">Rechercher</string>
    <string name="btn_about">A propos</string>
    <string name="btn_quit">Quitter</string>
    <string name="btn_retour">Retour au menu</string>
    <string name="btn_play">Jouer la mélodie</string>
    
    <string name="play">Jouer</string>
    <string name="stop">Arrêter</string>
    
    <string name="btn_site_web">Voir dans le navigateur web</string>
    
    <string name="about_titre">Paillardes - A propos</string>
    <string name="about_texte">Cette application open-source et sans pub propose les paroles des chansons paillardes les plus connus afin de prolonger ces coutumes estudiantines.\n\n Si vous aimé cette application, buvons-une bière ensemble! \n\nRéalisé par Yoann Katchourine.\n\nApplication sous licence GPL v3.</string>
    <string name="about_buy_beer">Buvons-une bière virtuelle ensemble!</string>
    
    <string name="search_hint">Recherche une chanson.</string>
    
    <string name="menu_url">Voir dans le navigateur web</string>

    <string name="font_size_decrease">−</string>
    <string name="font_size_increase">+</string>
    <string name="list_songs_title">Chansons</string>
    <string name="btn_contact">Envoyer un message</string>
</resources>
