<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:scaleType="fitCenter"
            android:src="@drawable/faluche" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="100dp" />

        <Button
            android:id="@+id/btn_list"
            android:layout_width="match_parent"
            android:layout_height="109dp"
            android:layout_marginLeft="@dimen/btn_margin_left"
            android:layout_marginTop="@dimen/btn_margin_top"
            android:layout_marginRight="@dimen/btn_margin_right"
            android:text="@string/btn_list"
            android:textSize="@dimen/menu_text" />

        <Button
            android:id="@+id/btn_search"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/btn_margin_left"
            android:layout_marginTop="@dimen/btn_margin_top"
            android:layout_marginRight="@dimen/btn_margin_right"
            android:text="@string/btn_search"
            android:textSize="@dimen/menu_text" />

        <Button
            android:id="@+id/btn_about"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/btn_margin_left"
            android:layout_marginTop="@dimen/btn_margin_top"
            android:layout_marginRight="@dimen/btn_margin_right"
            android:text="@string/btn_about"
            android:textSize="@dimen/menu_text" />

        <Button
            android:id="@+id/btn_buybeer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/btn_margin_left"
            android:layout_marginTop="@dimen/btn_margin_top"
            android:layout_marginRight="@dimen/btn_margin_right"
            android:text="@string/about_buy_beer"
            android:textSize="@dimen/menu_text" />

    </LinearLayout>
</ScrollView>
