<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/ch_titre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/title"
            android:gravity="center"
            android:textColor="@color/white"
            android:textSize="@dimen/ch_titre" />

        <Button
            android:id="@+id/btn_play_midi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/texte_margin"
            android:layout_marginRight="@dimen/texte_margin"
            android:text="@string/btn_play" />

        <TextView
            android:id="@+id/ch_paroles"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/texte_margin"
            android:layout_marginRight="@dimen/texte_margin"
            android:layout_marginBottom="@dimen/ch_paroles"
            android:gravity="center_horizontal"
            android:textColor="@color/white"
            android:textSize="@dimen/ch_paroles" />

        <Button
            android:id="@+id/btn_site_web"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/btn_margin_left"
            android:layout_marginRight="@dimen/btn_margin_right"
            android:text="@string/btn_site_web"
            android:textColor="@color/black"
            android:textSize="@dimen/btn_paroles" />

        <Button
            android:id="@+id/btn_retour"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/btn_margin_left"
            android:layout_marginRight="@dimen/btn_margin_right"
            android:text="@string/btn_retour"
            android:textColor="@color/black"
            android:textSize="@dimen/btn_paroles" />
    </LinearLayout>
</ScrollView>
